[package]
name = "example_rust_hsm"
version = "0.1.0"
edition = "2021"


[dependencies]
closure = "0.3.0"
rust_hsm = {path = "../rust_hsm"}
strum = { version = "0.26.3", features = ["derive"]}
log = "0.4.22"
futures = "0.3.31"
tokio = { version = "1.45.1", features = ["sync", "macros", "rt", "rt-multi-thread"] }
